Change log locations and random fixes

--- a/wsgi.ini
+++ b/wsgi.ini
@@ -14,3 +14,6 @@ vacuum = true
 die-on-term = true
 
 disable-logging = true
+
+#location of log files
+logto = /home/ethanj/projects/purple_air_dash/logs/uwsgi/%n.log
